
Slick 7.x-2.0-dev, 2015-12-07
-----------------------------
- Updated slick.api.php with more samples, quick and asnavfor ones.
- Respected empty centerPadding ('0' or '') to allow pure CSS controlled styled
  rather than inline style. This removed inline padding: 0px, so CSS do not have
  to use !important to override it.

Slick 7.x-2.0-dev, 2015-12-02
-----------------------------
- Issue #2623396 by dalemoore, Spanners: Really wide View edit screen in admin
  overlay
- Removed too specific lines from most skin CSS, such as color, weight, etc.
  where appropriate.
- Fixed for Fullscreen skin thumbnail nav with asNavFor.
- Removed over-specificity from slick.theme.css due to expected nested slicks
  as it turned out to break some builtin layouts like Full width. Your overrides
  should not be affected as the slick.theme.css is now less specific.

Slick 7.x-2.0-dev, 2015-11-28
-----------------------------
- Cleaned up useless lines.
- Fixed for FC nested slicks with iframe and media icons visibility.

Slick 7.x-2.0-dev, 2015-11-26
-----------------------------
- Added more description on Slick Grid or multiple rows carousel.
- Removed personal styling from slick.theme.css, mostly those testing rules
  against Bartik.
- Added "Lazy iframe" option to have truly lazyloaded iframes for Media and FC
  to speed up loading time before JS fired.
- Moved media icons and iframes after the image to allow using CSS siblings
  selector (~) for spinner visibility in combination with [data-lazy] which is
  removed when the image is fully loaded, e.g.:
  .media-icon--spinner { display: none; }
  img[data-lazy] ~ .media-icon--spinner { display: block; }

Slick 7.x-2.0-dev, 2015-11-21
-----------------------------
- #2546614 by Dr.Osd: Colorbox integration has broken iframe width

Slick 7.x-2.0-dev, 2015-11-16
-----------------------------
- Disabled thumbnail navigation if items < 2 to avoid gargantuan broken single