@@ -1066,13 +1066,24 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
   #overlay .form--slick .form-item label {
     width: 140px;
   }
-  
+
   #overlay .form--field .form-item label {
     width: 200px;
   }
 
   #overlay .form--slick .form-type-checkboxes > label  {
     width: 100%;
+  }
+
+  .navbar-tray-open .form--slick .vertical-tabs .form-item {
+    width: 49.8888%;
+  }
+  .navbar-tray-open .form--slick .vertical-tabs .form-type-checkboxes {
+    width: 100%;
+  }
+
+  .form--field {
+    min-width: 800px;
   }
 }
 
